src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Invalid/UnexpectedTranslationKey3/InvalidUnexpectedTranslationKey3.php
<?php

namespace Invalid\UnexpectedTranslationKey3;

use Claroline\PluginBundle\AbstractType\ClarolineExtension;

class InvalidUnexpectedTranslationKey3 extends ClarolineExtension
{
    public function getDescriptionTranslationKey()
    {
        return '';
    }
}